CR-2003-05-22-0: Testsuite: - enhancments to make testsuite compatible with
                              cvs commit from EB-2003-05-15-0 (PE/CKPT 
                              references moved into queue configuration)


EB-2003-05-22-0: Bugfix:    Changed qtype output in qstat according to man page
                 IZ:        #14
                 Changed:   qstat
                 Review:    AH

EB-2003-05-20-0: Enhancem.: Got rid of 'history'
                              
                            Removed history as described in section qacct(1)
                            and sge_qmaster(8) in specification for Cluster
                            Queues (#14)

                 IZ:        #14
                 Changed:   all 
                 Review:    AH

JG-2003-05-20-0  Enhancem.: Database spooling (PostgreSQL):
                            - spooling framework implementation (not for all
                              objects yet)
                            - script to setup database
                            - script to switch between spooling with and without
                              history
                            Event Mirror: When receiving the SHUTDOWN event,
                            do not exit, but set the global variable
                            shut_me_down. Exit will be done by the application.
                 Review:    EB

CR-2003-05-20-0: Testsuite: - fixed error when installing without root 
                              permission in test init_core_system()
                            - reading macro messages file at testsuite startup

CR-2003-05-19-0: Testsuite: - enhancments to make testsuite compatible with
                              cvs commit from EB-2003-05-15-0 (PE/CKPT 
                              references moved into queue configuration)

CR-2003-05-15-0: Testsuite: - new method to cleanup remote spooldirs in 
                              install_core_system check